--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.1.4",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.0"
+    "mongoose": "^8.0.0",
+    "morgan": "^1.10.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
