--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 MONGODB_URL = "mongodb+srv://shahdhaval201:WWOY0xTydxw9rMwX@dhavalshah.0t41mfz.mongodb.net/"
 JWT_SECRET = "mysecretkey"
+
+FORWARD_EMAIL_USER = "shahdhaval201@gmail.com"
+FORWARD_EMAIL_PASS = "krot fjvi vdho jkyi"
+PORT = "5000"
